--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -91,7 +91,7 @@
   .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    margin: 100px;
     margin-top: 20px;
   }
   
